# actix-mongo-jwt-api

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test.Dockerfile  tests.docker-compose.yml
keys/: rsa_private.pem  rsa_public.pem
python_tests/: client.py  test_integration.py
src/: main.rs
src/controller/: users.rs
src/database/: mod.rs
src/keys/: jwtRS256.key  jwtRS256.key.pub
src/models/: users.rs
src/service/: mod.rs  tests.rs  users.rs
src/test/: auth.rs
