[package]
name = "rust-mongo-example"
version = "0.1.0"
authors = ["David Emmanuel Katz <davidemmanuelkatz@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2"
actix-rt = "1"
serde = "1.0.103"
futures = "0.3.4"
dotenv = "0.15.0"
env_logger = "0.7"
validator = "0.10"
validator_derive = "0.10"
actix-web-validator = "1.0.0"
bcrypt = "0.8"
jsonwebtoken = "7.2.0"
chrono = "0.4.15"
regex = "1.3.9"
lazy_static = "1.4.0"

[dependencies.mongodb]
version = "1.1.0"
default-features = false
features = ["sync"]